@@ -1,14 +1,12 @@
-/* config.h.  Generated by configure.  */
-/* config.h.in.  Generated from configure.ac by autoheader.  */
 
 /* Define to 1 if you have the `acosh' function. */
-/* #undef HAVE_ACOSH */
+#undef HAVE_ACOSH 
 
 /* Define to 1 if you have the `asinh' function. */
-/* #undef HAVE_ASINH */
+#undef HAVE_ASINH 
 
 /* Define to 1 if you have the `atanh' function. */
-/* #undef HAVE_ATANH */
+#undef HAVE_ATANH
 
 /* Dynamic loading - not mandatory */
 /* #undef HAVE_DLFCN_H */
@@ -17,16 +15,16 @@
 #define HAVE_INTTYPES_H 1
 
 /* Define to 1 if you have the `amd' library (-lamd). */
-/* #undef HAVE_LIBAMD */
+#undef HAVE_LIBAMD
 
 /* Arpack is used for eigenvalue computation */
-/* #undef HAVE_LIBARPACK */
+#undef HAVE_LIBARPACK
 
 /* Define to 1 if you have the `pthread' library (-lpthread). */
 #define HAVE_LIBPTHREAD 1
 
 /* Define to 1 if you have the `umfpack' library (-lumfpack). */
-/* #undef HAVE_LIBUMFPACK */
+#undef HAVE_LIBUMFPACK 
 
 /* Define to 1 if you have the <memory.h> header file. */
 #define HAVE_MEMORY_H 1
@@ -50,7 +48,7 @@
 #define HAVE_SYS_TYPES_H 1
 
 /* Define to 1 if you have the <umfpack.h> header file. */
-/* #undef HAVE_UMFPACK_H */
+#undef HAVE_UMFPACK_H
 
 /* Define to 1 if you have the <umfpack/umfpack.h> header file. */
 /* #undef HAVE_UMFPACK_UMFPACK_H */
@@ -58,36 +56,14 @@
 /* Define to 1 if you have the <unistd.h> header file. */
 #define HAVE_UNISTD_H 1
 
-/* Name of package */
-#define PACKAGE "freefem++"
-
-/* Define to the address where bug reports for this package should be sent. */
-#define PACKAGE_BUGREPORT "hecht@ann.jussieu.fr"
-
-/* Define to the full name of this package. */
-#define PACKAGE_NAME "FreeFem++"
-
-/* Define to the full name and version of this package. */
-#define PACKAGE_STRING "FreeFem++ 1.41"
-
-/* Define to the one symbol short name of this package. */
-#define PACKAGE_TARNAME "freefem++"
-
-/* Define to the version of this package. */
-#define PACKAGE_VERSION "1.41"
 
 /* Define to 1 if you have the ANSI C header files. */
 #define STDC_HEADERS 1
 
-/* Version number of package */
-#define VERSION "1.41"
-
-/* FreeFem++ build date */
-#define VersionFreeFemDate "Thu May 27 15:23:36 CEST 2004"
-
-/* FreeFem++ version as a float */
-#define VersionFreeFempp 1.41
 
 /* Define to 1 if `lex' declares `yytext' as a `char *' by default, not a
    `char[]'. */
 #define YYTEXT_POINTER 1
+
+#include "config-version.h"
+
